fix the overflow sidebar issue

--- a/components/Layout/categorySidebar/categorySidebar.module.scss
+++ b/components/Layout/categorySidebar/categorySidebar.module.scss
@@ -1,16 +1,19 @@
 .main {
+  background-color: #f9f9f9;
+  border-radius: 10px;
   .sidebar {
     position: sticky;
     top: 80px;
-    width: 247px;
+    min-width: fit-content;
     height: 100%;
-    border-radius: 10px;
+
     margin-top: 50px;
-    padding: 0px 25px 25px 25px;
+
+    padding: 25px;
     box-sizing: border-box;
 
     @media (min-width: "900px") {
-      flex: 1;
+      flex-grow: 2;
       margin-top: 0;
     }
     h4 {
@@ -165,6 +168,8 @@
 
 @media screen and (max-width: 900px) {
   .main {
+    background-color: #f9f9f9;
+
     .sidebar {
       padding: 30px 0;
 
