--- a/styles/post.module.scss
+++ b/styles/post.module.scss
@@ -167,7 +167,7 @@
       width: 100%;
 
       .content {
-        width: 75%;
+        width: 70%;
         // max-width: 679px;
 
         word-break: break-word;
@@ -218,7 +218,7 @@
         }
       }
       .sidebar {
-        width: 25%;
+        width: 30%;
       }
     }
   }
